project(equeue)
set(CMAKE_VERBOSE_MAKEFILE ON)
add_definitions("-Wall -g")
set(LIBRARY_OUTPUT_PATH lib)
include_directories(../elog)
link_directories(../../elog/lib)
link_libraries(elog pthread config)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
add_library(equeue STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(equeue PROPERTIES LINKER_LANGUAGE C)
