project(equeue_test)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(SRC_LIST  equeue_test.cpp)
include_directories(../)
include_directories(../../be)
include_directories(../../elog)
add_definitions("-Wall -g -pg")
link_directories(../lib)
link_directories(../../elog/lib)
link_directories(../../be/lib)
link_libraries(equeue elog be pthread config)
add_executable(equeue_test ${SRC_LIST})
