project(xylxtest)
set(CMAKE_VERBOSE_MAKEFILE ON)
add_definitions("-Wall -g")
include_directories(${PROJECT_SOURCE_DIR}/../../efnfw)
include_directories(${PROJECT_SOURCE_DIR}/..)
link_directories(${PROJECT_SOURCE_DIR}/../../efnfw/lib)
link_libraries(nfw libprotobuf.a)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
add_executable(xylxtest ${SRC_LIST})
